--- a/shapestuff.ipynb
+++ b/shapestuff.ipynb
@@ -2,10 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import shapefile\n",
@@ -20,14 +18,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 4s\n"
+      "CPU times: user 47.5 s, sys: 1.62 s, total: 49.2 s\n",
+      "Wall time: 49.7 s\n"
      ]
     }
    ],
@@ -38,11 +37,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = big.return_db_information()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>NELat</th>\n",
+       "      <th>NELng</th>\n",
+       "      <th>SWLat</th>\n",
+       "      <th>SWLng</th>\n",
+       "      <th>land_area</th>\n",
+       "      <th>name</th>\n",
+       "      <th>population</th>\n",
+       "      <th>total_area</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>32.983407</td>\n",
+       "      <td>-87.148660</td>\n",
+       "      <td>32.908008</td>\n",
+       "      <td>-87.204744</td>\n",
+       "      <td>22739426</td>\n",
+       "      <td>Brent</td>\n",
+       "      <td>4772</td>\n",
+       "      <td>22817337</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>31.087048</td>\n",
+       "      <td>-85.839719</td>\n",
+       "      <td>31.001983</td>\n",
+       "      <td>-85.917436</td>\n",
+       "      <td>41109632</td>\n",
+       "      <td>Geneva</td>\n",
+       "      <td>4335</td>\n",
+       "      <td>41597082</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>32.537983</td>\n",
+       "      <td>-86.307299</td>\n",
+       "      <td>32.467912</td>\n",
+       "      <td>-86.356325</td>\n",
+       "      <td>17855610</td>\n",
+       "      <td>Coosada</td>\n",
+       "      <td>1301</td>\n",
+       "      <td>18476132</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>32.583532</td>\n",
+       "      <td>-86.301588</td>\n",
+       "      <td>32.518543</td>\n",
+       "      <td>-86.382203</td>\n",
+       "      <td>16249684</td>\n",
+       "      <td>Elmore</td>\n",
+       "      <td>1441</td>\n",
+       "      <td>16611947</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>32.595000</td>\n",
+       "      <td>-86.152776</td>\n",
+       "      <td>32.454971</td>\n",
+       "      <td>-86.258916</td>\n",
+       "      <td>28320364</td>\n",
+       "      <td>Wetumpka</td>\n",
+       "      <td>8278</td>\n",
+       "      <td>29456396</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       NELat      NELng      SWLat      SWLng  land_area      name  \\\n",
+       "0  32.983407 -87.148660  32.908008 -87.204744   22739426     Brent   \n",
+       "1  31.087048 -85.839719  31.001983 -85.917436   41109632    Geneva   \n",
+       "2  32.537983 -86.307299  32.467912 -86.356325   17855610   Coosada   \n",
+       "3  32.583532 -86.301588  32.518543 -86.382203   16249684    Elmore   \n",
+       "4  32.595000 -86.152776  32.454971 -86.258916   28320364  Wetumpka   \n",
+       "\n",
+       "   population  total_area  \n",
+       "0        4772    22817337  \n",
+       "1        4335    41597082  \n",
+       "2        1301    18476132  \n",
+       "3        1441    16611947  \n",
+       "4        8278    29456396  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   },
   {
@@ -130,6 +250,36 @@
    "outputs": [],
    "source": [
     "df2.to_csv(\"speed_test.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df2' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-e2571d1d392f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhead\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df2' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "df2.head(100)"
    ]
   },
   {
@@ -1202,7 +1352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
